set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
#add_executable(AtCoder_Beginners_Selection PracticeA.cpp)
#add_executable(AtCoder_Beginners_Selection ABC086A.cpp)
#add_executable(AtCoder_Beginners_Selection ABC081A.cpp)
#add_executable(AtCoder_Beginners_Selection ABC081B.cpp)
#add_executable(AtCoder_Beginners_Selection ABC087B.cpp)
#add_executable(AtCoder_Beginners_Selection ABC083B.cpp)
# add_executable(AtCoder_Beginners_Selection ABC088B.cpp)
#add_executable(AtCoder_Beginners_Selection ABC085B.cpp)
#add_executable(AtCoder_Beginners_Selection ABC085C.cpp)
#add_executable(AtCoder_Beginners_Selection ABC049C.cpp)
add_executable(AtCoder_Beginners_Selection ABC086C.cpp)