set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
#add_executable(Tenka1_Programmer_Beginner_Contest_2019 A.cpp)
#add_executable(Tenka1_Programmer_Beginner_Contest_2019 B.cpp)
add_executable(Tenka1_Programmer_Beginner_Contest_2019 C.cpp)
#add_executable(Tenka1_Programmer_Beginner_Contest_2019 D.cpp)